--- a/plugins/org.eclipse.emf.teneo.eclipse/src/org/eclipse/emf/teneo/eclipse/messages.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipse/src/org/eclipse/emf/teneo/eclipse/messages.properties
@@ -22,3 +22,4 @@ teneo.select.parent = Select a parent location and enter a file name
 teneo.import.xml = Select one or more XML resources to import from.
 teneo.import.xmi = Select one or more XMI resources to import from.
 teneo.import = Import
+teneo.generate.orm.file = Generate ORM mapping file
