[275739] Externalize strings in Teneo EclipseLink plug-ins

--- a/plugins/org.eclipse.emf.teneo.eclipselink.common.ui/src/org/eclipse/emf/teneo/eclipselink/common/ui/internal/messages/messages.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink.common.ui/src/org/eclipse/emf/teneo/eclipselink/common/ui/internal/messages/messages.properties
@@ -12,7 +12,7 @@
 
 button_fromPersistenceUnit=from Persistence Unit
 button_fromUserPreferences=from user preferences
-error_databaseContainsNo$0Objects=Database contains no '{0}' objects. Go back and select another EMF model package and/or root object type.
+error_databaseContainsNo$0Objects=Database contains no "{0}" objects. Go back and select another EMF model package and/or root object type.
 error_databaseURLMissing=Database URL name must be specified.
 error_editorIDMissing=Editor ID must be specified.
 error_editorIDMustIdentifyExistingEditor=Editor ID must identify existing database-enabled editor.
@@ -25,7 +25,7 @@ error_persistenceUnitNameMissing=Persistence Unit name must be specified.
 error_persistenceUnitNameMustIdentifyExistingPersistenceUnit=Persistence Unit name must identify existing Persistence Unit.
 error_rootObjectMissing=Root object must be specified.
 error_rootObjectMustBeExistingRootObjectCandidate=Root object must be member of existing root object candidates.
-error_rootObjectMustBeInEcorePackage$0=Root object type must be member of Ecore package '{0}'.
+error_rootObjectMustBeInEcorePackage$0=Root object type must be member of Ecore package "{0}".
 error_rootObjectTypeMissing=Root object type must be specified.
 error_userNameMissing=User name must be specified.
 group_databaseLogin=Database login:
