--- a/plugins/org.eclipse.emf.teneo.eclipselink/src/org/eclipse/emf/teneo/eclipselink/internal/messages/messages.properties
+++ b/plugins/org.eclipse.emf.teneo.eclipselink/src/org/eclipse/emf/teneo/eclipselink/internal/messages/messages.properties
@@ -11,12 +11,12 @@
 # ====================================================================
 
 assert_cannotSaveUnloadedResource=Cannot save a resource which is not loaded.
-assert_classloaderMustHavePersistenceUnit$0OnClasspath=Persistence unit property 'PersistenceUnitProperties.CLASSLOADER' must be initialized with some classloader which has persistence unit named '{0}' on its classpath.
-assert_invalidObjectId=Invalid object id (expected format: ownerTypeName|idAttributeName='id').
-assert_unableToCreateEntityManangerFactoryforPersistenceUnit$0=Unable to create entity manager factory for persistence unit named '{0}'.
-assert_uriMustContainContentsQueryString=Argument for parameter 'uri' must contain a query string representing an alias of a query for the contents of this resource.
-assert_uriMustContainEclipseLinkScheme=Argument for parameter 'uri' must contain an 'eclipselink:' scheme.
-assert_uriMustContainPersistenceUnitSegment=Argument for parameter 'uri' must contain one segment representing the name of a Persistence Unit.
+assert_classloaderMustHavePersistenceUnit$0OnClasspath=Persistence unit property "PersistenceUnitProperties.CLASSLOADER" must be initialized with some classloader which has persistence unit named "{0}" on its classpath.
+assert_invalidObjectId=Invalid object id (expected format: ownerTypeName|idAttributeName="id").
+assert_unableToCreateEntityManangerFactoryforPersistenceUnit$0=Unable to create entity manager factory for persistence unit named "{0}".
+assert_uriMustContainContentsQueryString=Argument for parameter "uri" must contain a query string representing an alias of a query for the contents of this resource.
+assert_uriMustContainEclipseLinkScheme=Argument for parameter "uri" must contain an "eclipselink:" scheme.
+assert_uriMustContainPersistenceUnitSegment=Argument for parameter "uri" must contain one segment representing the name of a Persistence Unit.
 exception_cannotSetOwnerOnEList=Cannot set owner on Elist.
 exception_collectionClassNotSupported$0=Collection class not supported: {0}
 exception_containsKeyNotImplemented=EclipseLinkEMap\#containsKey() not implemented.
